--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "dependencies": {
     "aws-sdk": "^2.1513.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.9.7",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
