--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.9.7",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
