--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "sequelize": "^6.32.1",
     "socket.io": "^4.7.2"
